--- a/src/Chirp.Web/Pages/Shared/_Search.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Search.cshtml
@@ -17,7 +17,11 @@
         const searchInput = document.getElementById("search-input")
 
         searchInput.addEventListener("focus", () => moveSearchPlaceHolder())
-        searchInput.addEventListener("blur", () => moveSearchPlaceHolder())
+        searchInput.addEventListener("blur", () => {
+            moveSearchPlaceHolder()
+            const results = document.getElementById("results")
+            results.getElementById("results").innerHTML = ""
+        })
         searchInput.addEventListener("input", () => searchQuery(searchInput.value))
         searchInput.addEventListener("keydown", function(event) {
             if (event.key === "Enter") {
