Fixed issue with multiple users (one github and one local user with same email) + The email from github is saved so users don't have to type it manually
Co-Authored-By: Símun Larsson Løkke Rasmussen <simra@itu.dk>

--- a/src/Chirp.Web/Pages/Shared/_Imports.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Imports.cshtml
@@ -2,5 +2,6 @@
     <title>@ViewData["Title"]</title>
     <link href="/css/style.css" rel="stylesheet" />
     <link href="/css/index.css" rel="stylesheet" />
+    <link href="/css/IdentityUI.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="/assets/icon1.png" />
 </head>
