--- a/src/Chirp.Web/Pages/Shared/_Post.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Post.cshtml
@@ -18,10 +18,9 @@
         postInput.addEventListener("keydown", function(event) {
             if (event.key === "Enter") {
                 event.preventDefault();
-
                 const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
                 // TODO: add name of account in json
-                fetch(window.location.href + "?handler=Save", {
+                fetch(window.location.href + (window.location.href.includes("?") ? "&handler=Save" : "?handler=Save"), {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
