--- a/src/Chirp.Web/Pages/Shared/_Search.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Search.cshtml
@@ -29,12 +29,11 @@
             }
         });
     });
-
-
+    
     function searchQuery(input) {
         const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
         // TODO: add name of account in json
-        fetch(window.location.href + "?handler=Search", {
+        fetch(window.location.href + (window.location.href.includes("?") ? "&handler=Search" : "?handler=Search"), {
             method: "POST",
             headers: {
                 "Content-Type": "application/json",
