--- a/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
@@ -6,21 +6,21 @@
 <div class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-  <li class="nav-item">
-    <a  class="nav-link text-dark" asp-area="Identity"
-    asp-page="/Account/Manage/Index" title="Manage">
-        Hello @User.Identity.Name!</a>
-  </li>
-    <li class="nav-item">
-      <form class="form-inline" asp-page="/Account/Logout"
+    <div class="nav-item">
+      <a class="form-inline" asp-page="/Account/Logout"
       asp-route-returnUrl="@Url.Page("/", new { area = "" })"
-      asp-area="Identity" method="post" >
-        <button  class="nav-link btn btn-link text-dark"
-          type="submit">Logout </button>
-        </form>
-    </li>
+      asp-area="Identity" method="post" id = "navbutton">
+          
+          <img src = "/assets/logout.png" alt="Logout" id="Log">
+             Logout[@User.Identity.Name] 
+        </a>
+    </div>
 } else {
   <div class="nav-item">
-     <a asp-area="Identity" asp-page="/Account/Login">Log in</a>
+     <a asp-area="Identity" asp-page="/Account/Login" id = "navbutton">
+     <img src = "/assets/enter.png" alt="Logout" id="Log">
+     Log in
+     
+     </a>
   </div>
 } </div> 
