--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -16,28 +16,29 @@
 
 <h2 class="name-timeline"> Public Timeline </h2>
 
-@if (Model.Cheeps.Any())
-{
+@if(SignInManager.IsSignedIn(User)){
 
-    @if(SignInManager.IsSignedIn(User)){
 
-        @foreach (var cheep in Model.Cheeps)
-        {
-            @await Html.PartialAsync("_Cheep", new CheepPartialView {
-                Author= cheep.Author,
-                Body= cheep.Text,
-                Date= cheep.Timestamp
-            })
-        }
+    @if (Model.Cheeps.Any())
+    {
+
+
+            @foreach (var cheep in Model.Cheeps)
+            {
+                @await Html.PartialAsync("_Cheep", new CheepPartialView {
+                    Author= cheep.Author,
+                    Body= cheep.Text,
+                    Date= cheep.Timestamp
+                })
+            } 
     } else{
-        <div>
-            <div class="cheep-item">
-
-                <p class="cheep-body"> Log in to experience new ideas on Chirp. </p>
-            </div>
-        </div>
+        <em>There are no cheeps so far.</em>
     }
-} else
-{
-    <em>There are no cheeps so far.</em>
+}else{
+    <div>
+        <div class="cheep-item">
+
+            <p class="cheep-body"> Log in to experience new ideas on Chirp. </p>
+        </div>
+    </div>
 }
