--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -1,5 +1,8 @@
 ﻿@page "/users/{author}"
 @using Chirp.Web.models
+@using Chirp.Repositories
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 @model Chirp.Web.models.UserTimelineModel
 @{
     ViewData["Title"] = "Chirp!";
@@ -10,22 +13,30 @@
 
 @await Html.PartialAsync("_Nav")
 
-
 <h2 class="name-timeline"> @routeName's Timeline </h2>
-@await Html.PartialAsync("_Follow")
 
-@if (Model.Cheeps.Any())
-{
-    @foreach (var cheep in Model.Cheeps)
-    {
-        @await Html.PartialAsync("_Cheep", new CheepPartialView {
-            Author= cheep.Author,
-            Body= cheep.Text,
-            Date= cheep.Timestamp
-        })
+
+@if(SignInManager.IsSignedIn(User)){
+    @await Html.PartialAsync("_Follow")
+
+    @if (Model.Cheeps.Any()){
+        @foreach (var cheep in Model.Cheeps)
+        {
+            @await Html.PartialAsync("_Cheep", new CheepPartialView {
+                Author= cheep.Author,
+                Body= cheep.Text,
+                Date= cheep.Timestamp
+            })
+        }
+    }else{
+        <em>There are no cheeps so far.</em>
     }
-}
-else
-{
-    <em>There are no cheeps so far.</em>
-}
+
+}else{
+    <div>
+        <div class="cheep-item">
+
+            <p class="cheep-body"> Log in to experience new ideas on Chirp. </p>
+        </div>
+    </div>
+    }
