only showing follow if user is different from itself

--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -17,7 +17,9 @@
 
 
 @if(SignInManager.IsSignedIn(User)){
-    @await Html.PartialAsync("_Follow")
+    @if(!User.Identity.Name.Equals(routeName)){
+        @await Html.PartialAsync("_Follow")
+    }
 
     @if (Model.Cheeps.Any()){
         @foreach (var cheep in Model.Cheeps)
