--- a/src/Chirp.Web/Pages/Shared/_Imports.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Imports.cshtml
@@ -4,4 +4,5 @@
     <link href="/css/index.css" rel="stylesheet" />
     <link href="/css/IdentityUI.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="/assets/icon1.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
