partial merge of post users
Co-Authored-By: StrippedSoma <simra@itu.dk>

--- a/src/Chirp.Web/Pages/Shared/_Post.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Post.cshtml
@@ -27,7 +27,7 @@
                         "RequestVerificationToken": antiforgeryToken
                     },
                     body: JSON.stringify({ 
-                        postName: "Helge",
+                        postName: @User.Identity.Name,
                         postString: postInput.value,
                     })
                 })
