--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -90,7 +90,7 @@ footer {
     flex-direction: row-reverse;
     width: 100%;
     bottom: 0;
-    pointer-events:none;
+    z-index: 100;
 }
 
 .footer-button {
