--- a/src/Chirp.Web/Pages/Shared/_Post.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Post.cshtml
@@ -20,7 +20,7 @@
             if (event.key === "Enter") {
                 event.preventDefault();
                 const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
-                // TODO: add name of account in json
+
                 fetch(window.location.href + (window.location.href.includes("?") ? "&handler=Save" : "?handler=Save"), {
                     method: "POST",
                     headers: {
@@ -28,8 +28,9 @@
                         "RequestVerificationToken": antiforgeryToken
                     },
                     body: JSON.stringify({ 
-                        postName: @User.Identity.Name,
+                        postName: "Helge",
                         postString: postInput.value,
+                        postAuthorId: 11,
                     })
                 })
                 .then(response => response.json())
