--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/users/{author}"
 @using Chirp.Web.models
 @using Chirp.Repositories
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @model Chirp.Web.models.UserTimelineModel
