--- a/src/Chirp.Web/Pages/Shared/_Follow.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Follow.cshtml
@@ -1,15 +1,22 @@
-<button id="follow">Follow</button>
+<button id="follow" type="submit" asp-handler="Follow" onclick=followPost()>Follow</button>
 
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        const follow = document.getElementById("follow")
-
-        follow.addEventListener("onclick", () => console.log("Hello!"))
-    });
-
     function followPost(){
-        fetch{
-            header
-        }
+        const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
+
+        fetch(window.location.href + (window.location.href.includes("?") ? "&handler=Follow" : "?handler=Follow"), {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "RequestVerificationToken": antiforgeryToken
+            },
+            body: JSON.stringify({ 
+                Username: "Helge",
+                FollowId: 14,
+            })
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
     }
 </script>
