--- a/src/Chirp.Web/Pages/Shared/_Post.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Post.cshtml
@@ -28,9 +28,8 @@
                         "RequestVerificationToken": antiforgeryToken
                     },
                     body: JSON.stringify({ 
-                        postName: "Helge",
+                        postName: '@User.Identity.Name',
                         postString: postInput.value,
-                        postAuthorId: 11,
                     })
                 })
                 .then(response => response.json())
