--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -19,7 +19,12 @@
 
 @if(SignInManager.IsSignedIn(User)){
     @if(!User.Identity.Name.Equals(routeName)){
-        <button id="follow" type="submit" asp-handler="Follow" onclick=followPost()>Follow</button>
+        @if(@Model.IsFollowing(@User.Identity.Name, $"{@routeName}")){
+            <button id="follow" type="submit" asp-handler="Follow" onclick=followPost()>Follow</button>
+        }
+        else{
+            <button id="follow" type="submit" asp-handler="Follow" onclick=followPost()>Unfollow</button>
+        }
     }
 
     @if (Model.Cheeps.Any()){
