--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -18,14 +18,8 @@
 
 
 @if(SignInManager.IsSignedIn(User)){
-    @if(!User.Identity.Name.Equals(routeName)){
-        @if(@Model.IsFollowing(@User.Identity.Name, $"{@routeName}")){
-            <button id="follow" type="submit" asp-handler="Follow" onclick=followPost()>Follow</button>
-        }
-        else{
-            <button id="follow" type="submit" asp-handler="Follow" onclick=followPost()>Unfollow</button>
-        }
-    }
+
+    @await Html.PartialAsync("_Follow")
 
     @if (Model.Cheeps.Any()){
         @foreach (var cheep in Model.Cheeps)
@@ -48,24 +42,3 @@
         </div>
     </div>
 }
-
-<script>
-    function followPost(){
-        const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
-
-        fetch(window.location.href + (window.location.href.includes("?") ? "&handler=Follow" : "?handler=Follow"), {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-                "RequestVerificationToken": antiforgeryToken
-            },
-            body: JSON.stringify({ 
-                Username: '@User.Identity.Name',
-                FollowName: '@routeName',
-            })
-        })
-        .catch(error => {
-            console.error("Error:", error);
-        });
-    }
-</script>
