issues with unfollow

--- a/src/Chirp.Web/Pages/Shared/_Follow.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Follow.cshtml
@@ -1,6 +1,20 @@
-<button id="follow" type="submit" asp-handler="Follow" onclick=followPost()>Follow</button>
+@if(!User.Identity.Name.Equals(@ViewData["Location"])){
+    <button id="follow" type="submit" asp-handler="Follow">
+        @if(await @Model.IsFollowing($"{@User.Identity.Name}", $"{@ViewData["Location"]}")){
+            <span>Unfollow</span>
+        } else {
+            <span>Follow</span>
+        }
+    </button>
+}
 
 <script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const Follow = document.getElementById("follow")
+
+        Follow.addEventListener("click", () => followPost())
+    })
+
     function followPost(){
         const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
 
@@ -11,13 +25,18 @@
                 "RequestVerificationToken": antiforgeryToken
             },
             body: JSON.stringify({ 
-                Follow: true,
                 Username: '@User.Identity.Name',
                 FollowUser: '@ViewData["Location"]'
             })
         })
+        .then(response =>  response.json() )
+        .then(data => {
+            console.log("success:", data)
+            location.reload()
+        })
         .catch(error => {
             console.error("Error:", error);
-        });
+            
+        })
     }
 </script>
