refactoring the entire identity package

--- a/src/Chirp.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/src/Chirp.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-@inject SignInManager<ApplicationUser> SignInManager
+@using Chirp.Core.Entities
+@inject SignInManager<Author> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
