--- a/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
+@using Chirp.Core.Entities
 @using Microsoft.AspNetCore.Identity
 @using Chirp.Repositories;
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<Author> SignInManager
+@inject UserManager<Author> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <div class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -23,4 +24,4 @@
      
      </a>
   </div>
-} </div> 
+} </div>
