--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -1,7 +1,8 @@
+@using Chirp.Core.Entities
   @using Microsoft.AspNetCore.Identity
     @using Chirp.Repositories;
-    @inject SignInManager<ApplicationUser> SignInManager
-    @inject UserManager<ApplicationUser> UserManager
+    @inject SignInManager<Author> SignInManager
+    @inject UserManager<Author> UserManager
 <nav>
               
     <div class="nav-tags">
