--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -1,9 +1,10 @@
 ﻿@page "/users/{author}"
+@using Chirp.Core.Entities
 @using Chirp.Web.models
 @using Chirp.Repositories
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<Author> SignInManager
+@inject UserManager<Author> UserManager
 @model Chirp.Web.models.UserTimelineModel
 @{
     ViewData["Title"] = "Chirp!";
