no warnings in cshtml

--- a/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
       asp-area="Identity" method="post" id = "navbutton">
           
           <img src = "/assets/logout.png" alt="Logout" id="Log">
-             Logout[@User.Identity.Name] 
+             Logout[@User!.Identity!.Name] 
         </a>
     </div>
 } else {
