--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -16,7 +16,7 @@
         </div>
 
         @if(SignInManager.IsSignedIn(User)){
-            <div class="tag" onClick="window.location = '/users/@User.Identity.Name'">
+            <div class="tag" onClick="window.location = '/users/@User!.Identity!.Name'">
                 <img 
                     src = "/assets/user.png"
                     alt="My timeline" 
