--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -60,8 +60,8 @@ h2, .name-timeline {
 .cheep-item::before{
   content: "";
   position: absolute;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-top: 2px solid rgb(0, 0, 0);
   border-left: 2px solid rgb(0, 0, 0);
   top:0px;
@@ -74,8 +74,8 @@ h2, .name-timeline {
 .cheep-item::after{
   content: "";
   position: absolute;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-right: 2px solid rgb(0, 0, 0);
   border-bottom: 2px solid rgb(0, 0, 0);
   bottom:0px;
@@ -153,4 +153,20 @@ nav {
   width: 200px;
   background: white;
   list-style-type: none;
+}
+
+.pagelist li {
+  display: flex;
+  justify-content: center;
+  width: 20px;
+  height: 15px;
+  border-radius: 2px;
+  border-style: solid;
+  border-color: rgba(119, 106, 106, 0.762);
+  border-width: 1px;
+  align-items: center;
+}
+
+.pagelist li:hover{
+  background: rgba(64, 144, 205, 0.583);
 }
