added skeleton for MyPage

--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -21,6 +21,7 @@
 @if(SignInManager.IsSignedIn(User)){
 
     @await Html.PartialAsync("_Follow")
+    @await Html.PartialAsync("_MyPage")
 
     @if (Model.Cheeps.Any()){
         @foreach (var cheep in Model.Cheeps)
