--- a/src/Chirp.Web/Pages/Shared/_MyPage.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_MyPage.cshtml
@@ -1,5 +1,5 @@
 <button onclick=changePage()> My Page </button>
 
 <script>
-    function changePage(){ window.location = location.origin + "/mypage" }
+    function changePage(){ window.location = location.pathname + "/mypage" }
 </script>
