--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -1,4 +1,4 @@
-@page "user/{author}/mypage"
+@page "/users/{author}/mypage"
 @using Chirp.Core.Entities
 @model Chirp.Web.models.MyPage
 @inject SignInManager<Author> SignInManager
@@ -11,14 +11,47 @@
     var author = await @Model.GetAuthorDTO(@User!.Identity!.Name!);
 }
 
-<h2>@author.Name's private page</h2>
+@await Html.PartialAsync("_Nav")
+
+<h2>Your private information</h2>
 
 <div class="mypage-outer">
-    <div class="mypawge-Identifiers">
+    <div class="mypage-Identifiers">
+            <div>Name</div>
             <div>Email</div>        
         </div>
 
     <div class="mypage-variables">
+        <div>@author.Name</div>
         <div>@author.Email</div>
     </div>
 </div>
+
+<button>Forget me</button>
+
+<h3>All your personal tweets</h3>
+@if(SignInManager.IsSignedIn(User))
+{
+    @if (Model.MyCheeps.Count > 0)
+    {
+        @foreach (var cheep in Model.MyCheeps)
+        {
+            @await Html.PartialAsync("_Cheep", new CheepPartialView {
+                Author= cheep.Author,
+                Body= cheep.Text,
+                Date= cheep.Timestamp
+            })
+        } 
+    } else
+    {
+        <em>You have no cheeps so far.</em>
+    }
+} else
+{
+    <div>
+        <div class="cheep-item">
+
+            <p class="cheep-body"> Log in to experience new ideas on Chirp. </p>
+        </div>
+    </div>
+}
