--- a/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
@@ -5,7 +5,7 @@
         <strong class="cheep-author">  <a href="/users/@Model.Author">@Model.Author</a> </strong>
 
         <p class="cheep-body"> @Model.Body </p>
-
+        <p class="cheep-body"> @Model.Like </p>
         <span class="cheep-date"> &mdash; @Model.ToDateTime(Model.Date) </span>
     </div>
 </div>
