--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -22,15 +22,15 @@
 
     @if (Model.Cheeps.Any())
     {
-
-
             @foreach (var cheep in Model.Cheeps)
             {
                 @await Html.PartialAsync("_Cheep", new CheepPartialView {
+                    Id = cheep.Id,
                     Author= cheep.Author,
                     Body= cheep.Text,
                     Date= cheep.Timestamp,
-                    Like= cheep.Likes
+                    Like= cheep.Likes,
+                    isLiked = false
                 })
             } 
     } else{
