--- a/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
@@ -8,23 +8,24 @@
         <p class="cheep-body"> @Model.Like </p>
         <span class="cheep-date"> &mdash; @Model.ToDateTime(Model.Date) </span>
         <button id="like" type="submit" asp-handler="Like">
-        @if(await @Model.HasLiked($"{@User!.Identity!.Name}")){
-            <span>Like</span>
-        } else {
+        @if(@Model.isLiked){
             <span>UnLike</span>
+        } else {
+            <span>Like</span>
         }
         </button>
     </div>
 </div>
 
+
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         const Follow = document.getElementById("like")
 
-        Follow.addEventListener("click", () => followPost())
+        Follow.addEventListener("click", () => likePost())
     })
 
-    function followPost(){
+    function likePost(){
         const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
 
         fetch(window.location.href + (window.location.href.includes("?") ? "&handler=Like" : "?handler=Like"), {
@@ -34,8 +35,8 @@
                 "RequestVerificationToken": antiforgeryToken
             },
             body: JSON.stringify({ 
-                Username: '@User.Identity.Name',
-                FollowUser: '@ViewData["Location"]'
+                Username: '@User!.Identity!.Name',
+                cheepId: '@Model.Id'
             })
         })
         .then(response =>  response.json() )
