cheeps now updates correctly if they have been liked

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -31,7 +31,7 @@
                     Body= cheep.Text,
                     Date= cheep.Timestamp,
                     Like= cheep.Likes,
-                    isLiked = false
+                    isLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id)
                 })
             } 
     } else{
