add dislikes in cheep model

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -30,7 +30,8 @@
                     Author= cheep.Author,
                     Body= cheep.Text,
                     Date= cheep.Timestamp,
-                    Like= cheep.Likes,
+                    Likes = cheep.Likes,
+                    Dislikes = cheep.Dislikes,
                     isLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id)
                 })
             } 
