--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -31,7 +31,8 @@
                 Author= cheep.Author,
                 Body= cheep.Text,
                 Date= cheep.Timestamp,
-                Like= cheep.Likes,
+                Likes = cheep.Likes,
+                Dislikes = cheep.Dislikes,
                 isLiked = false
             })
         }
