--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -32,7 +32,8 @@
                     Date= cheep.Timestamp,
                     Likes = cheep.Likes,
                     Dislikes = cheep.Dislikes,
-                    isLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id)
+                    isLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id),
+                    isDisliked = await @Model.HasDisliked(User!.Identity!.Name!, cheep.Id)
                 })
             } 
     } else{
