Settings wheel now references the "manage your account" page - or "Index" in html

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -19,9 +19,9 @@
                 </div>
 
                 @if(SignInManager.IsSignedIn(User)){
-                    <div class = "settings">
-                        <img src="/assets/settings.png" onclick = "window.location = '/?page=0'" id="settingIcon" />
-                    </div>
+                    <a class = "settings" asp-area="Identity" asp-page="/Account/Manage/Index">
+                        <img src="/assets/settings.png" id="settingIcon" />
+                    </a>
                 }
             </header>
 
